# todly

./: .gitignore  LICENSE  README.md  build.ps1  dev.ps1  index.html  package.json  pnpm-lock.yaml  vite.config.ts
data/presets/: krea2-turbo.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  launch.rs  lib.rs  main.rs  ws.rs
src/api/: comfy.ts  tauri.ts  ws.ts
src/components/: ComfyBootPanel.tsx  Sidebar.tsx  ui.tsx
src/features/batch/: BatchPage.tsx
src/features/gallery/: GalleryPage.tsx
src/features/generate/: GeneratePage.tsx
src/features/models/: ModelsPage.tsx
src/features/presets/: PresetsPage.tsx
src/features/queue/: QueuePage.tsx
src/features/settings/: SettingsPage.tsx
src/lib/: img.ts  metadata.ts  parseBatch.ts  preset.ts
src/stores/: app.ts  batch.ts  generation.ts  launch.ts
