[package]
name = "todly"
version = "0.1.0"
description = "Todly — a modern desktop front-end for ComfyUI"
edition = "2021"

[lib]
name = "todly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# enabled by `tauri build` — serves the embedded frontend instead of the dev server
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ComfyUI blocks browser-origin requests (Sec-Fetch-Site/Origin checks),
# so the websocket runs on the Rust side and is bridged to the UI via events
tokio-tungstenite = "0.26"
reqwest = { version = "0.12", default-features = false }
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
